--- a/installer/AIGuesserMM/AILookup_MergeModule.wxs
+++ b/installer/AIGuesserMM/AILookup_MergeModule.wxs
@@ -7,7 +7,7 @@
 			<Directory Id="MergeRedirectFolder">
 
                 <Component Id="AIGuesserEC.dll" Guid="50092CDC-A19C-406F-B649-47268C66C8EE">
-                    <File Id="AIGuesserEC.dll" Name="AIGuesserEC.dll" KeyPath="yes" Assembly=".net" AssemblyManifest="AIGuesserEC.dll" AssemblyApplication="AIGuesserEC.dll" Source="..\..\output\release\AIGuesserEC.dll" />
+                    <File Id="AIGuesserEC.dll" Name="AIGuesserEC.dll" KeyPath="yes" Assembly=".net" AssemblyManifest="AIGuesserEC.dll" AssemblyApplication="AIGuesserEC.dll" Source="..\..\output\Win32\release\AIGuesserEC.dll" />
                 </Component>
 
                 <Directory Id="AiECFolder" Name="EC">
@@ -23,10 +23,10 @@
             <Directory Id="CommonFilesFolder" SourceName="Common Files Folder">
                 <Directory Id="AiSIL" Name="SIL">
                     <Component Id="GuesserECLegacy.dll" Guid="035E0E4D-7C92-4872-8CCA-FED87CF63DB9">
-                        <File Id="GuesserECLegacy.dll" Name="GuesserECLegacy.dll" ReadOnly="yes" KeyPath="yes" Source="..\..\output\release\GuesserECLegacy.dll"/>
+                        <File Id="GuesserECLegacy.dll" Name="GuesserECLegacy.dll" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\GuesserECLegacy.dll"/>
                     </Component>
                     <Component Id="GuesserEC.dll" Guid="D6327C7E-A1E0-4DE2-86C9-BD535A7E5324">
-                        <File Id="GuesserEC.dll" Name="GuesserEC.dll" ReadOnly="yes" KeyPath="yes" Source="..\..\output\release\GuesserEC.dll"/>
+                        <File Id="GuesserEC.dll" Name="GuesserEC.dll" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\GuesserEC.dll"/>
                     </Component>
                     <Directory Id="Help" Name="Help">
                         <Component Id="AdaptItGuesserHelp" Guid="8EA270BD-77D5-42AB-9B53-906310EA60F1">
