Add ICU dlls and Helps into the EC_40 Merge Module

--- a/installer/EC_40_64bit_MM/EC_40_MergeModule.wxs
+++ b/installer/EC_40_64bit_MM/EC_40_MergeModule.wxs
@@ -12,6 +12,18 @@
 
 			<Directory Id="MergeRedirectFolder">
 
+				<Component Id="IcuEC.dll" Guid="{4DDD39C7-DE34-416B-9B3A-3766E8BC9954}">
+					<File Id="IcuEC.dll" Name="IcuEC.dll" Vital="yes" KeyPath="yes" AssemblyManifest="IcuEC.dll" AssemblyApplication="IcuEC.dll" Assembly=".net" Source="..\..\output\x64\release\IcuEC.dll"/>
+				</Component>
+				<Component Id="IcuConvEC.dll" Guid="{20990390-30F4-4A3F-B016-1BC64551E890}">
+					<File Id="IcuConvEC.dll" Name="IcuConvEC.dll" Vital="yes" KeyPath="yes" Source="..\..\output\x64\release\IcuConvEC.dll"/>
+				</Component>
+				<Component Id="IcuRegexEC.dll" Guid="{515C2F9E-93AA-4DA0-B9E7-6411B1CA0453}">
+					<File Id="IcuRegexEC.dll" Name="IcuRegexEC.dll" Vital="yes" KeyPath="yes" Source="..\..\output\x64\release\IcuRegexEC.dll"/>
+				</Component>
+				<Component Id="IcuTranslitEC.dll" Guid="{956FEE51-7104-4CA6-970B-E3EBFF498131}">
+					<File Id="IcuTranslitEC.dll" Name="IcuTranslitEC.dll" Vital="yes" KeyPath="yes" Source="..\..\output\x64\release\IcuTranslitEC.dll"/>
+				</Component>
 				<Component Id="ECInterfaces.dll" Guid="{EEF62831-0505-47C2-A1FF-39C38FC839FD}">
 					<Class Id="{E8DE7761-7091-38B8-82CD-C67A76F62DC9}" Context="InprocServer32" Description="ECInterfaces.mappingRegistry" ThreadingModel="both" ForeignServer="mscoree.dll">
 						<ProgId Id="ECInterfaces.mappingRegistry" Description="ECInterfaces.mappingRegistry" />
@@ -497,20 +509,54 @@
 					</Component>
 					<Directory Id="Help" Name="Help">
 						<Component Id="CPHelp" Guid="58fac2f3-e469-4e62-a5a1-970647ebe5fc">
-							<File Id="CPHelp" Name="Code Page Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Code Page Converter Plug-in About box.mht"/>
+							<File Id="CPHelp" Name="Code Page Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\x64\release\Help\Code Page Converter Plug-in About box.mht"/>
 						</Component>
 						<Component Id="CmpdHelp" Guid="a2557ea3-3ec1-41aa-8a06-af9fccfd07da">
-							<File Id="CmpdHelp" Name="Compound Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Compound Converter Plug-in About box.mht"/>
+							<File Id="CmpdHelp" Name="Compound Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\x64\release\Help\Compound Converter Plug-in About box.mht"/>
 						</Component>
 						<Component Id="FallBackHelp" Guid="cd14321a-d6c0-44aa-b59d-773e9b060d34">
-							<File Id="FallBackHelp" Name="Fallback Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\Fallback Converter Plug-in About box.mht"/>
+							<File Id="FallBackHelp" Name="Fallback Converter Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\x64\release\Help\Fallback Converter Plug-in About box.mht"/>
 						</Component>
 						<Component Id="TECkitHelp" Guid="292dcfa4-3602-4861-ae01-6b4875707dec">
-							<File Id="TECkitHelp" Name="TECkit Map Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\TECkit Map Plug-in About box.mht"/>
+							<File Id="TECkitHelp" Name="TECkit Map Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\x64\release\Help\TECkit Map Plug-in About box.mht"/>
 						</Component>
 						<Component Id="CantReadMhtFiles.htm" Guid="{F3B39444-A2B0-40D8-8863-8FE1E8194FF4}">
-							<File Id="CantReadMhtFiles.htm" Name="CantReadMhtFiles.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\CantReadMhtFiles.htm"/>
+							<File Id="CantReadMhtFiles.htm" Name="CantReadMhtFiles.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\x64\release\Help\CantReadMhtFiles.htm"/>
 						</Component>
+						<Component Id="IcuRegex" Guid="{8A0498CB-71B8-4C0F-AE24-95FDD529BDAB}">
+							<File Id="IcuRegex" Name="ICU Regular Expression Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Regular Expression Plug-in About box.mht"/>
+						</Component>
+						<Component Id="IcuTranslit" Guid="{E863CC65-432C-4567-B402-BCB70D81A565}">
+							<File Id="IcuTranslit" Name="ICU Transliterators Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Transliterators Plug-in About box.mht"/>
+						</Component>
+						<Component Id="ICU_Converters_Plugin_About_box.htm" Guid="{286A6417-34B7-4A87-B50A-64E24E5FCB91}">
+							<!-- The following File ID has been truncated to suppress ICE03 string overflow in the shortcut that uses it -->
+							<File Id="ICU_Converters_About" Name="ICU Converters Plug-in About box.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box.htm"/>
+						</Component>
+						<Directory Id="ICUConvPlug" Name="ICU Converters Plug-in About box_files">
+							<Component Id="image008.jpg" Guid="{22B4C7D8-C5D8-4020-8E71-66815484188F}">
+								<File Id="image008.jpg" Name="image008.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image008.jpg"/>
+							</Component>
+							<Component Id="image001.png" Guid="{C1741779-881E-40BC-B08F-B7380AD4768D}">
+								<File Id="image001.png" Name="image001.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image001.png"/>
+							</Component>
+							<Component Id="image003.png" Guid="{235136D4-2BA5-4109-8445-BB772B1C736C}">
+								<File Id="image003.png" Name="image003.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image003.png"/>
+							</Component>
+							<Component Id="image007.png" Guid="{C485E451-F599-4547-8D31-7ED844184F4B}">
+								<File Id="image007.png" Name="image007.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image007.png"/>
+							</Component>
+							<Component Id="image002.jpg" Guid="{40D73995-FCA3-41C1-A207-6CE6694197AB}">
+								<File Id="image002.jpg" Name="image002.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image002.jpg"/>
+							</Component>
+							<Component Id="image004.jpg" Guid="{BB93ABAD-85AB-46B9-9DA0-96A6D41D019D}">
+								<File Id="image004.jpg" Name="image004.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image004.jpg"/>
+							</Component>
+							<Component Id="filelist.xml" Guid="{818EF4EC-81AD-4B6D-9258-4784872DA7A1}">
+								<File Id="filelist.xml" Name="filelist.xml" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\filelist.xml"/>
+							</Component>
+						</Directory>
+
 					</Directory>
 				</Directory>
 			</Directory>
@@ -544,6 +590,9 @@
 								<Shortcut Id="CmpdPluginHelp" Directory="SILConvHelp" Name="Compound Converter Plug-in Help" Target="[#CmpdHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
 								<Shortcut Id="FallbackPluginHelp" Directory="SILConvHelp" Name="Primary-Fallback Converter Plug-in Help" Target="[#FallBackHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
 								<Shortcut Id="TECkitPluginHelp" Directory="SILConvHelp" Name="TECkit Converter Plug-in Help" Target="[#TECkitHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="ICUConvHelp" Directory="SILConvHelp" Name="ICU Converters Help" Target="[#ICU_Converters_About]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="ICUTranlitHelp" Directory="SILConvHelp" Name="ICU Transliterators Help" Target="[#IcuTranslit]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+								<Shortcut Id="ICURegexHelp" Directory="SILConvHelp" Name="ICU Regular Expression Help" Target="[#IcuRegex]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
 								<!-- The next item is junk to make validation pass on ICE18 -->
 								<CreateFolder/>
 							</Component>
