--- a/installer/EC_40_MM/EC_40_MergeModule.wxs
+++ b/installer/EC_40_MM/EC_40_MergeModule.wxs
@@ -11,7 +11,18 @@
 			</Component>
 
 			<Directory Id="MergeRedirectFolder">
-
+				<Component Id="IcuEC.dll" Guid="{B4FD77A8-402F-421B-81F3-43A3B6295275}">
+					<File Id="IcuEC.dll" Name="IcuEC.dll" Vital="yes" KeyPath="yes" AssemblyManifest="IcuEC.dll" AssemblyApplication="IcuEC.dll" Assembly=".net" Source="..\..\output\Win32\release\IcuEC.dll"/>
+				</Component>
+				<Component Id="IcuConvEC.dll" Guid="{8432913F-51EF-417E-A095-F548633FD65E}">
+					<File Id="IcuConvEC.dll" Name="IcuConvEC.dll" Vital="yes" KeyPath="yes" Source="..\..\output\Win32\release\IcuConvEC.dll"/>
+				</Component>
+				<Component Id="IcuRegexEC.dll" Guid="{45CCC459-A266-4881-A768-B643DF6353D0}">
+					<File Id="IcuRegexEC.dll" Name="IcuRegexEC.dll" Vital="yes" KeyPath="yes" Source="..\..\output\Win32\release\IcuRegexEC.dll"/>
+				</Component>
+				<Component Id="IcuTranslitEC.dll" Guid="{6DBD7549-A586-42F2-9411-13117F9C4D2C}">
+					<File Id="IcuTranslitEC.dll" Name="IcuTranslitEC.dll" Vital="yes" KeyPath="yes" Source="..\..\output\Win32\release\IcuTranslitEC.dll"/>
+				</Component>
 				<Component Id="ECInterfaces.dll" Guid="7B5EC0FA-BC63-4010-B0A0-927BD419B4A3">
 					<Class Id="{E8DE7761-7091-38B8-82CD-C67A76F62DC9}" Context="InprocServer32" Description="ECInterfaces.mappingRegistry" ThreadingModel="both" ForeignServer="mscoree.dll">
 						<ProgId Id="ECInterfaces.mappingRegistry" Description="ECInterfaces.mappingRegistry" />
@@ -511,48 +522,84 @@
 							<Component Id="CantReadMhtFiles.htm" Guid="{F3B39444-A2B0-40D8-8863-8FE1E8194FF4}">
 								<File Id="CantReadMhtFiles.htm" Name="CantReadMhtFiles.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\CantReadMhtFiles.htm"/>
 							</Component>
+							<Component Id="IcuRegex" Guid="{786CA242-4204-46B7-86D5-93ED456710B5}">
+								<File Id="IcuRegex" Name="ICU Regular Expression Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Regular Expression Plug-in About box.mht"/>
+							</Component>
+							<Component Id="IcuTranslit" Guid="{024219A1-29EB-4D20-BB9A-DB9E3C3F1743}">
+								<File Id="IcuTranslit" Name="ICU Transliterators Plug-in About box.mht" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Transliterators Plug-in About box.mht"/>
+							</Component>
+							<Component Id="ICU_Converters_Plugin_About_box.htm" Guid="{963A2D88-6CFE-4C91-8830-CD6F8A3872E8}">
+								<!-- The following File ID has been truncated to suppress ICE03 string overflow in the shortcut that uses it -->
+								<File Id="ICU_Converters_About" Name="ICU Converters Plug-in About box.htm" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box.htm"/>
+							</Component>
+							<Directory Id="ICUConvPlug" Name="ICU Converters Plug-in About box_files">
+								<Component Id="image008.jpg" Guid="{C3970194-5CAF-44A9-B59E-F7AD6CF3F84D}">
+									<File Id="image008.jpg" Name="image008.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image008.jpg"/>
+								</Component>
+								<Component Id="image001.png" Guid="{F166A049-8724-4EA5-80F0-12B55A48F4BF}">
+									<File Id="image001.png" Name="image001.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image001.png"/>
+								</Component>
+								<Component Id="image003.png" Guid="{C2DA1740-EDCF-49E2-8E62-C07AB42C476B}">
+									<File Id="image003.png" Name="image003.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image003.png"/>
+								</Component>
+								<Component Id="image007.png" Guid="{1C4C6530-7E4F-411E-BF80-F3AC653219A6}">
+									<File Id="image007.png" Name="image007.png" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image007.png"/>
+								</Component>
+								<Component Id="image002.jpg" Guid="{448BEBF5-5EE0-4474-B92C-CD3B3B22442F}">
+									<File Id="image002.jpg" Name="image002.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image002.jpg"/>
+								</Component>
+								<Component Id="image004.jpg" Guid="{DFF6B368-EF7B-405E-BC57-F25CA8D3B821}">
+									<File Id="image004.jpg" Name="image004.jpg" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\image004.jpg"/>
+								</Component>
+								<Component Id="filelist.xml" Guid="{E6812F05-9BD4-4DBF-BD33-86E99A7B1A5E}">
+									<File Id="filelist.xml" Name="filelist.xml" ReadOnly="yes" KeyPath="yes" Source="..\..\output\Win32\release\Help\ICU Converters Plug-in About box_files\filelist.xml"/>
+								</Component>
+							</Directory>
 						</Directory>
 					</Directory>
 				</Directory>
-			</Directory>
-			<!--This is still needed to open authentication for the repository file folder-->
-			<Directory Id="CommonAppDataFolder" SourceName="AppData">
-				<Directory Id="AppDataSIL" Name="SIL">
-					<Directory Id="AppDataECFolder" Name="Repository">
-						<Component Id="CreateRepositoryFolder" Guid="4C784F73-E98B-440C-91D8-7D07ED0DB41B">
-							<CreateFolder>
-								<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
-							</CreateFolder>
-						</Component>
-					</Directory>
-					<Directory Id="AppDataMapsTablesFolder" Name="MapsTables">
-						<Component Id="CreateMapsTablesFolder" Guid="36C7C46E-B071-4B62-8AF8-2DA691F45C3A">
-							<CreateFolder>
-								<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
-							</CreateFolder>
-						</Component>
+				
+				<!--This is still needed to open authentication for the repository file folder-->
+				<Directory Id="CommonAppDataFolder" SourceName="AppData">
+					<Directory Id="AppDataSIL" Name="SIL">
+						<Directory Id="AppDataECFolder" Name="Repository">
+							<Component Id="CreateRepositoryFolder" Guid="4C784F73-E98B-440C-91D8-7D07ED0DB41B">
+								<CreateFolder>
+									<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
+								</CreateFolder>
+							</Component>
+						</Directory>
+						<Directory Id="AppDataMapsTablesFolder" Name="MapsTables">
+							<Component Id="CreateMapsTablesFolder" Guid="36C7C46E-B071-4B62-8AF8-2DA691F45C3A">
+								<CreateFolder>
+									<util:PermissionEx User="AuthenticatedUser" GenericAll="yes" />
+								</CreateFolder>
+							</Component>
+						</Directory>
 					</Directory>
 				</Directory>
-			</Directory>
 
-			<Directory Id="StartMenuFolder" SourceName="Start Menu">
-				<Directory Id="ProgramMenuFolder" SourceName="Programs">
-					<Directory Id="SIL_Converters" Name="SIL Converters">
-						<Directory Id="SILConvHelp" Name="Help">
-							<Component Id="HelpShortcuts" Guid="5f95a3bb-d7be-4a03-a6e6-07f5b6e38c6d" KeyPath="yes">
-								<Shortcut Id="CPPluginHelp" Directory="SILConvHelp" Name="Code Page Plug-in Help" Target="[#CPHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-								<Shortcut Id="CmpdPluginHelp" Directory="SILConvHelp" Name="Compound Converter Plug-in Help" Target="[#CmpdHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-								<Shortcut Id="FallbackPluginHelp" Directory="SILConvHelp" Name="Primary-Fallback Converter Plug-in Help" Target="[#FallBackHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-								<Shortcut Id="TECkitPluginHelp" Directory="SILConvHelp" Name="TECkit Converter Plug-in Help" Target="[#TECkitHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
-								<!-- The next item is junk to make validation pass on ICE18 -->
-								<CreateFolder/>
-							</Component>
+				<Directory Id="StartMenuFolder" SourceName="Start Menu">
+					<Directory Id="ProgramMenuFolder" SourceName="Programs">
+						<Directory Id="SIL_Converters" Name="SIL Converters">
+							<Directory Id="SILConvHelp" Name="Help">
+								<Component Id="HelpShortcuts" Guid="5f95a3bb-d7be-4a03-a6e6-07f5b6e38c6d" KeyPath="yes">
+									<Shortcut Id="CPPluginHelp" Directory="SILConvHelp" Name="Code Page Plug-in Help" Target="[#CPHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+									<Shortcut Id="CmpdPluginHelp" Directory="SILConvHelp" Name="Compound Converter Plug-in Help" Target="[#CmpdHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+									<Shortcut Id="FallbackPluginHelp" Directory="SILConvHelp" Name="Primary-Fallback Converter Plug-in Help" Target="[#FallBackHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+									<Shortcut Id="TECkitPluginHelp" Directory="SILConvHelp" Name="TECkit Converter Plug-in Help" Target="[#TECkitHelp]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+									<Shortcut Id="ICUConvHelp" Directory="SILConvHelp" Name="ICU Converters Help" Target="[#ICU_Converters_About]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+									<Shortcut Id="ICUTranlitHelp" Directory="SILConvHelp" Name="ICU Transliterators Help" Target="[#IcuTranslit]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+									<Shortcut Id="ICURegexHelp" Directory="SILConvHelp" Name="ICU Regular Expression Help" Target="[#IcuRegex]" Hotkey="0" IconIndex="0" Show="normal" WorkingDirectory="Help"/>
+									<!-- The next item is junk to make validation pass on ICE18 -->
+									<CreateFolder/>
+								</Component>
+							</Directory>
 						</Directory>
 					</Directory>
 				</Directory>
 			</Directory>
 		</Directory>
-
 		<!-- The following section launches the installed file EncConvertersAppDataMover40.exe but hides its DOS window -->
 		<CustomAction Id="SetAppDataMoverData" Return="check" Property="LaunchAppDataMover" Value="[#EncConvertersAppDataMover40.exe]" />
 		<CustomAction Id="LaunchAppDataMover" Return="ignore" Impersonate="no" Execute="deferred" Script="vbscript">
